# smartpoll

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: executor.rs  hello.rs  yield.rs
src/: algorithm.rs  lib.rs  sync.rs  tests.rs  util.rs
src/tests/: correctness.rs  mod.rs  proof.rs  util.rs
