[package]
name = "smartpoll"
description = "A 'Task' abstraction that simplifies polling futures."
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MilesCourtie/smartpoll"
repository = "https://github.com/MilesCourtie/smartpoll"
categories = ["asynchronous"]
keywords = ["async", "executor", "futures", "task"]
