[package]
name = "smartpoll"
description = "A 'Task' abstraction that simplifies polling futures."
authors = ["Miles Courtie"]
version = "1.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MilesCourtie/smartpoll"
repository = "https://github.com/MilesCourtie/smartpoll"
categories = ["asynchronous", "no-std"]
keywords = ["async", "executor", "futures", "task", "no_std"]
